compiler/testData/diagnostics/tests/typealias/returnTypeNothingShouldBeSpecifiedExplicitly.kt
typealias N = Nothing

fun <!ABBREVIATED_NOTHING_RETURN_TYPE!>testFun<!>(): N = null!!
konst <!ABBREVIATED_NOTHING_PROPERTY_TYPE!>testVal<!>: N = null!!
konst <!ABBREVIATED_NOTHING_PROPERTY_TYPE!>testValWithGetter<!>: N get() = null!!
